@@ -1,3 +1,7 @@
+2011-11-20 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFArray.c: Finish runtime function for CFArray type.
+
 2011-11-04 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFArray.c: Fix bugs.
